--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-  <title>Telegram-Live-@Gyani_Bro</title>
+  <title>Gyani_Bro</title>
 
 
 
@@ -159,39 +159,12 @@
 
 
 
-    <option value="Englishp" selected="">ENGLISH - UPTO 1080P</option>
+    <option value="English" selected="">ENGLISH - 4K</option>
 
 
-
-    <option value="Hindip">HINDI - UPTO 1080P</option>
-
-
-
-    <option value="Haryanvip">HARYANAVI - UPTO 1080P</option>
-
-
-
-    <option value="Bhojpurip">BHOJPURI - UPTO 1080P</option>
-
-
-
-    <option value="Telugup">TELUGU - UPTO 1080P</option>
-
-
-
-    <option value="Tamilp">TAMIL - UPTO 1080P</option>
-
-
-
-    <option value="Bengalip">BENGALI - UPTO 1080P</option>
-
-
-
-    <option value="Kannadap">KANNADA - UPTO 1080P</option>
 
     
-<option value="English">ENGLISH - 4K</option>
-    
+ 
 
    <option value="Hindi">HINDI - 4K</option>
 
@@ -243,7 +216,7 @@
 
 
 
-  <script>if(confirm("Join Our Telegram Channel @WatchAddaLive")) { window.location.href = "https://telegram.me/WatchAddaLive" }
+  <script>if(confirm("Join Our Telegram Channel @Gyani_Bro")) { window.location.href = "https://telegram.me/Gyani_Bro" }
 
 
 
@@ -253,66 +226,68 @@
 
       var videoSources = {
 
-"Englishp": "https://prod-sports-eng-gm.jiocinema.com/hls/live/2100297/hd_akamai_iosmob_avc_eng_indvsnz_261024/master.m3u8",
+"Englishp": "https://prod-sports-eng-gm.jiocinema.com/hls/live/2100297/hd_akamai_iosmob_avc_eng_indvsnz_031124/master.m3u8",
 
 
 
-      "Hindip": "https://prod-sports-hin-gm.jiocinema.com/hls/live/2100322/hd_akamai_iosmob_avc_hin_indvsnz_261024/master.m3u8",
+      "Hindip": "https://prod-sports-hin-gm.jiocinema.com/hls/live/2100322/hd_akamai_iosmob_avc_hin_indvsnz_031124/master.m3u8",
 
 
 
-      "Haryanvip": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109699/hd_akamai_iosmob_avc_odia_indvsnz_261024/master.m3u8",
+      "Haryanvip": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109699/hd_akamai_iosmob_avc_odia_indvsnz_031124/master.m3u8",
 
 
 
-      "Bhojpurip": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109761/hd_akamai_iosmob_avc_bhoj_indvsnz_261024/master.m3u8",
+      "Bhojpurip": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109761/hd_akamai_iosmob_avc_bhoj_indvsnz_031124/master.m3u8",
 
 
 
-      "Telugup": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109717/hd_akamai_iosmob_avc_tel_indvsnz_261024/master.m3u8",
+      "Telugup": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109717/hd_akamai_iosmob_avc_tel_indvsnz_031124/master.m3u8",
 
 
 
-      "Tamilp": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109711/hd_akamai_iosmob_avc_tam_indvsnz_261024/master.m3u8",
+      "Tamilp": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109711/hd_akamai_iosmob_avc_tam_indvsnz_031124/master.m3u8",
 
 
 
-      "Bengalip": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109773/hd_akamai_iosmob_avc_ben_indvsnz_261024/master.m3u8",
+      "Bengalip": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109773/hd_akamai_iosmob_avc_ben_indvsnz_031124/master.m3u8",
 
 
 
-      "Kannadap": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109723/hd_akamai_iosmob_avc_kan_indvsnz_261024/master.m3u8",
+      "Kannadap": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109723/hd_akamai_iosmob_avc_kan_indvsnz_031124/master.m3u8",
 
 
-      "English": "https://prod-sports-eng-cf.jiocinema.com/hls/live/2100305/uhd_akamai_ctv_avc_eng_indvsnz_261024/index.m3u8",
-
-
-
-      "Hindi": "https://prod-sports-hin-cf.jiocinema.com/hls/live/2100320/uhd_akamai_ctv_avc_hin_indvsnz_261024/index.m3u8",
+      "English": "https://prod-sports-eng-cf.jiocinema.com/hls/live/2112598/uhd__akamai__ctv__avc__ssaispot__indvssa__eng__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
 
 
 
-      "Haryanvi": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109697/uhd_akamai_ctv_avc_odia_indvsnz_261024/master.m3u8",
+      "Hindi": "https://prod-sports-hin-cf.jiocinema.com/hls/live/2100324/uhd__akamai__ctv__avc__ssaispot__indvssa__hin__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
 
 
 
-      "Bhojpuri": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109758/uhd_akamai_ctv_avc_bhoj_indvsnz_261024/master.m3u8",
+      "Haryanvi": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109514/uhd__akamai__ctv__avc__ssaispot__indvssa__odia__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
 
 
 
-      "Telugu": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109715/uhd_akamai_ctv_avc_tel_indvsnz_261024/master.m3u8",
+      "Bhojpuri": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109729/uhd__akamai__ctv__avc__ssaispot__indvssa__bhoj__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
 
 
 
-      "Tamil": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109709/uhd_akamai_ctv_avc_tam_indvsnz_261024/master.m3u8",
+      "Telugu": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109685/uhd__akamai__ctv__avc__ssaispot__indvssa__tel__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
 
 
 
-      "Bengali": "https://prod-sports-north-cf.jiocinema.com/hls/live/2109771/uhd_akamai_ctv_avc_ben_indvsnz_261024/master.m3u8",
+      "Tamil": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109679/uhd__akamai__ctv__avc__ssaispot__indvssa__tam__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
 
 
 
-      "Kannada": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109721/uhd_akamai_ctv_avc_kan_indvsnz_261024/master.m3u8",
+      "Bengali": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109514/uhd__akamai__ctv__avc__ssaispot__indvssa__odia__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
+
+
+
+      "Kannada": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109691/uhd__akamai__ctv__avc__ssaispot__indvssa__kan__m1__081124__dbeedb71-c6de-484c-8b7e-51cbb61645b4/master.m3u8",
+
+
 
        };
 
@@ -458,7 +433,7 @@
 
 
 
-    <a href="https://telegram.me/WatchAddaLive" target="_blank">
+    <a href="https://telegram.me/@Gyani_Bro" target="_blank">
 
 
 
