--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 
       var videoSources = {
 
+
 "Englishp": "https://prod-sports-eng-gm.jiocinema.com/hls/live/2100297/hd_akamai_iosmob_avc_eng_indvsnz_031124/master.m3u8",
 
 
@@ -257,11 +258,11 @@
       "Kannadap": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109723/hd_akamai_iosmob_avc_kan_indvsnz_031124/master.m3u8",
 
 
-      "English": "https://prod-sports-eng-cf.jiocinema.com/hls/live/2112598/uhd__akamai__ctv__avc__ssaispot__indvssa__eng__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "English": "https://prod-sports-eng-cf.jiocinema.com/hls/live/2112587/uhd_akamai_ctv_avc_eng_ipl_auction_241124/master.m3u8",
 
 
 
-      "Hindi": "https://prod-sports-hin-cf.jiocinema.com/hls/live/2100324/uhd__akamai__ctv__avc__ssaispot__indvssa__hin__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "Hindi": "https://prod-sports-hin-gm.jiocinema.com/hls/live/2112605/uhd_akamai_ctv_avc_hin_ipl_auction_241124/master.m3u8",
 
 
 
@@ -273,21 +274,19 @@
 
 
 
-      "Telugu": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109685/uhd__akamai__ctv__avc__ssaispot__indvssa__tel__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "Telugu": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109716/uhd_akamai_ctv_avc_tel_ipl_auction_241124/master.m3u8",
 
 
 
-      "Tamil": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109679/uhd__akamai__ctv__avc__ssaispot__indvssa__tam__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "Tamil": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109710/uhd_akamai_ctv_avc_tam_ipl_auction_241124/master.m3u8",
 
 
 
-      "Bengali": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109691/uhd__akamai__ctv__avc__ssaispot__indvssa__kan__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "Bengali": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109772/uhd_akamai_ctv_avc_ben_ipl_auction_241124/master.m3u8",
 
 
 
-      "Kannada": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109691/uhd__akamai__ctv__avc__ssaispot__indvssa__kan__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
-
-
+      "Kannada": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109722/uhd_akamai_ctv_avc_kan_ipl_auction_241124/master.m3u8",
 
 
 
