--- a/index.html
+++ b/index.html
@@ -172,9 +172,15 @@
 
     <option value="Haryanvi">HARYANVI - 4K</option>
 
+    <option value="Gujarati"> GUJARATI - 4K</option>
 
+    <option value="Marathi"> MARATHI - 4K</option>
+
+    <option value="Punjabi"> PUNJABI - 4K</option>
 
     <option value="Bhojpuri">BHOJPURI - 4K</option>
+
+    <option value="Malayalam">MALAYALAM - 4K</option>
 
 
 
@@ -226,66 +232,72 @@
 
       var videoSources = {
 
-"Englishp": "https://prod-sports-eng-gm.jiocinema.com/hls/live/2100297/hd_akamai_iosmob_avc_eng_indvsnz_031124/master.m3u8",
+"Englishp": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Hindip": "https://prod-sports-hin-gm.jiocinema.com/hls/live/2100322/hd_akamai_iosmob_avc_hin_indvsnz_031124/master.m3u8",
+      "Hindip": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HIN_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Haryanvip": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109699/hd_akamai_iosmob_avc_odia_indvsnz_031124/master.m3u8",
+      "Haryanvip": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HAR_IDC_MOB/Fallback/index.m3u8",
+
+
+      "Gujarati": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Guj_IDC_MOB/Fallback/index.m3u8",
+
+
+      "Marathi": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_MAR_IDC_MOB/Fallback/index.m3u8",
+
+      "Punjabi": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Punj_IDC_MOB/Fallback/index.m3u8",
+
+      "Bhojpurip": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8",
+
+      "Malayalam": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Mal_IDC_MOB/Fallback/index.m3u8",
+
+      "Telugup": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TEL_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Bhojpurip": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109761/hd_akamai_iosmob_avc_bhoj_indvsnz_031124/master.m3u8",
+      "Tamilp": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Telugup": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109717/hd_akamai_iosmob_avc_tel_indvsnz_031124/master.m3u8",
+      "Bengalip": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_BEN_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Tamilp": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109711/hd_akamai_iosmob_avc_tam_indvsnz_031124/master.m3u8",
+      "Kannadap": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_KAN_IDC_MOB/Fallback/index.m3u8",
+
+
+      "English": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Bengalip": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109773/hd_akamai_iosmob_avc_ben_indvsnz_031124/master.m3u8",
+      "Hindi": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HIN_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Kannadap": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109723/hd_akamai_iosmob_avc_kan_indvsnz_031124/master.m3u8",
-
-
-      "English": "https://prod-sports-eng-cf.jiocinema.com/hls/live/2112587/uhd_akamai_ctv_avc_eng_ipl_auction_251124/master.m3u8",
+      "Haryanvi": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HAR_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Hindi": "https://prod-sports-hin-gm.jiocinema.com/hls/live/2112605/uhd_akamai_ctv_avc_hin_ipl_auction_251124/master.m3u8",
+      "Bhojpuri": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Haryanvi": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109514/uhd__akamai__ctv__avc__ssaispot__indvssa__odia__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "Telugu": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TEL_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Bhojpuri": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109729/uhd__akamai__ctv__avc__ssaispot__indvssa__bhoj__m1__151124__c8e9cc1b-eb9a-47bc-b525-e56767798c21/master.m3u8",
+      "Tamil": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Telugu": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109716/uhd_akamai_ctv_avc_tel_ipl_auction_251124/master.m3u8",
+      "Bengali": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_BEN_IDC_MOB/Fallback/index.m3u8",
 
 
 
-      "Tamil": "https://prod-sports-south-gm.jiocinema.com/hls/live/2109710/uhd_akamai_ctv_avc_tam_ipl_auction_251124/master.m3u8",
-
-
-
-      "Bengali": "https://prod-sports-north-gm.jiocinema.com/hls/live/2109772/uhd_akamai_ctv_avc_ben_ipl_auction_251124/master.m3u8",
-
-
-
-      "Kannada": "https://prod-sports-south-cf.jiocinema.com/hls/live/2109722/uhd_akamai_ctv_avc_kan_ipl_auction_251124/master.m3u8",
+      "Kannada": "https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_KAN_IDC_MOB/Fallback/index.m3u8",
 
 
 
